--- a/flexbox/2-styles.css
+++ b/flexbox/2-styles.css
@@ -371,7 +371,8 @@
   .section-hero .section-inner {
     padding: 10rem 40rem 2rem 0;
   }
-  /*Section Latest news===============*/
+ 
+  /* Section Latest news ============================= */
 
   ul.row{
     flex-direction: column;
