--- a/flexbox/2-styles.css
+++ b/flexbox/2-styles.css
@@ -372,10 +372,11 @@
     padding: 10rem 40rem 2rem 0;
   }
  
-  /* Section Latest news ============================= */
+  /* Section Latest news 
+  ============================= */
 
   ul.row{
-    flex-direction: column;
+    flex-direction: row-reverse;
   }
 
   /*** 4. CARD ***/
