--- a/flexbox/2-styles.css
+++ b/flexbox/2-styles.css
@@ -375,7 +375,7 @@
   /* Section Latest news 
   ============================= */
 
-  ul.row{
+  .section-latest-news .row {
     flex-direction: row-reverse;
   }
 
