--- a/flexbox/6-styles.css
+++ b/flexbox/6-styles.css
@@ -223,8 +223,8 @@
     letter-spacing: var(--nav-item-letter-spacing);
   }
   
-  .nav .nav-item+.nav-item {
-    margin: var(0 0 2rem);
+  .nav .nav-item + .nav-item {
+    margin: var(0 0 0 2rem);
   }
 
   .nav .nav-link {
